fixed clinic-info__container gap

--- a/src/blocks/clinic-info/clinic-info.scss
+++ b/src/blocks/clinic-info/clinic-info.scss
@@ -6,8 +6,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    gap: 32px;
-
+    gap: 36px;
     height: 100%;
 
     @media (min-width: $screen-laptop) {
